# pancho-degen-arena

./: .env.mainnet.example  .gitignore  MAINNET_RUNBOOK.md  ONCHAIN_CUTOVER.md  README.md  devnet_airdrop_worker.sh  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  wrangler.jsonc
.github/workflows/: ci.yml  d1-backup-verify.yml  ops-alert.yml
app/: globals.css  layout.tsx  page.tsx
app/api/entries/: route.ts
app/api/ops/health/: route.ts
app/api/ops/summary/: route.ts
app/api/oracle/: route.ts
app/api/results/: route.ts
app/api/settle/: route.ts
app/api/status/: route.ts
components/: updown-terminal-mount.tsx  updown-terminal.tsx
lib/: api-guards.ts  audit.ts  auth.ts  onchain-pvp.ts  oracle.ts  rate-limit-store.ts  round-ledger.ts  settlement.ts  sim-ledger.ts  sim-settlement.ts
onchain/: Anchor.toml  README.md
onchain/abi/: pancho_pvp.idl.json  pancho_pvp.types.ts
onchain/migrations/: deploy.ts
onchain/programs/pancho_pvp/: Cargo.toml
onchain/programs/pancho_pvp/src/: lib.rs
onchain/tests/: pancho_pvp.ts  smoke.mjs
scripts/: canary-workers.mjs  ci-guard.mjs  d1-backup.mjs  devnet-autopilot.sh  devnet-autopilotctl.sh  devnet-faucet-watch.mjs  devnet-fleet.sh  devnet-keepalive.sh  devnet-runner.sh  keeper.mjs  migrate-ledger-to-postgres.mjs  onchain-keeper.mjs  onchain-preflight.mjs  ops-alert.mjs  ops-health.mjs  ops-summary.mjs  prelaunch-gate.mjs  sim-keeper.mjs  stress-5000-sim.mjs  stress-5000-sustained.mjs  stress-multiround-staged.mjs  stress-settlement.mjs  verify-latest-backup.mjs
(+4 files in other folders)
